cambios cursos y formulario beca

--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
     <link rel="stylesheet" href="./js/slick-1.8.1/slick/slick.css">
     <link rel="stylesheet" href="js/slick-1.8.1/slick/slick-theme.css">
     <link rel="stylesheet" href="css/slider.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -25,27 +20,26 @@
             <input class="buscador" type="search" name="q">
             <ul class="resultados ocultar"></ul>
         </div>
-        <div class="grupo">
-            <div>
-                <img class="carrito" src="img/shopping_cart_black_48dp.svg" alt="carrito">
-                <span class="cantidad">0</span>
-
-            </div>
+        <div  class="grupo">
+        <div>
+            <img class="carrito" src="img/shopping_cart_black_48dp.svg" alt="carrito">
+            <span class="cantidad">0</span>
+            
+        </div>
             <ul class="compras ocultar">
                 <li id="sin-cursos">Todavía no se han obtenido cursos.</li>
             </ul>
         </div>
     </header>
-
     <nav> <!--MENU-->
         <ul class="menu">
-            <li><a href="index.html"><img class="icono" src="img/home_white_48dp.svg" alt="icono de home"> Home</a></li>
-            <li><a href="calendario.html"><img class="icono" src="img/calendar_month_white_48dp.svg"
-                        alt="icono de calendario"> Cursos</a></li>
-            <li><a href="gift_card.html"><img class="icono" src="img/card_giftcard_white_48dp.svg" alt="icono de giftcard">
-                    Becas</a></li>
-            <li><a href="contacto.html"><img class="icono" src="img/contact_support_white_48dp.svg"
-                        alt="icono de contacto"> Contacto</a></li>
+            <li><img class="icono" src="img/home_white_48dp.svg" alt="icono de home"> <a href="index.html">Home</a></li>
+            <li><img class="icono" src="img/calendar_month_white_48dp.svg" alt="icono de calendario"><a
+                    href="calendario.html">Calendario de cursos</a></li>
+            <li><img class="icono" src="img/card_giftcard_white_48dp.svg" alt="icono de giftcard"><a
+                    href="gift_card.html">Gift Cards</a></li>
+            <li><img class="icono" src="img/contact_support_white_48dp.svg" alt="icono de contacto"><a
+                    href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
     <main>
@@ -89,7 +83,7 @@
         <section>
             <h2> Cursos destacados</h2>
             <div class="destacados" id="container">
-
+                
             </div>
         </section>
 
@@ -109,7 +103,7 @@
     <footer>
         <ul>
             <h5>Copyright 2023 - Tecnicatura web - UNLAM</h5>
-            <li>ASD - DNI</li>
+            <li>Arroyo, Jonatan David - 38.700.536</li>
             <li>Lee Gonzáles, Mariana - 42.193.753</li>
             <li>Riveira González, María Constanza - - 34.114.124</li>
         </ul>
