--- a/becas.html
+++ b/becas.html
@@ -5,42 +5,77 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bit Academy - Becas</title>
-  <link rel="stylesheet" href="css/estilos_generales.css">
-  <!-- <link rel="stylesheet" href="css/estiloBecas.css"> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
 
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+
+  <title>Bit Academy - Becas</title>
+  <link href='fullcalendar/core/main.css' rel='stylesheet' />
+  <link href='fullcalendar/daygrid/main.css' rel='stylesheet' />
+  <script src='fullcalendar/core/main.js'></script>
+  <script src='fullcalendar/daygrid/main.js'></script>
+
+
+  <link rel="stylesheet" href="css/estilos_generales.css">
+  <link rel="stylesheet" href="css/estilos_cursos.css">
+  <link rel="stylesheet" href="css/estilos_nav_footer.css">
+
+
+
+  <link rel="stylesheet" href="web-fonts-with-css/css/fontawesome-all.min.css">
+  <link rel="stylesheet" href="web-fonts-with-css/css/fa-brands.min.css">
+
+
+
+
 </head>
 
 <body>
   <header id="inicio">
-    <img class="logo" src="img/logo.svg" alt="logo de Bit Academy">
+    <img class=logo src="img/logo.svg" alt="logo de Bit Academy">
     <div>
       <input class="buscador" type="search" name="q">
       <ul class="resultados ocultar"></ul>
     </div>
     <div class="grupo">
-      <img class="carrito" src="img/shopping_cart_black_48dp.svg" alt="carrito">
-      <span class="cantidad">0</span>
+      <div>
+        <a href="#"><span class="material-symbols-outlined">
+            account_circle
+          </span></a>
+      </div>
       <ul class="compras ocultar">
         <li id="sin-cursos">Todavía no se han obtenido cursos.</li>
       </ul>
     </div>
   </header>
-  <nav>
-    <ul class="menu">
-      <li><img class="icono" src="img/home_white_48dp.svg" alt="icono de home"> <a href="index.html">Home</a></li>
-      <li><img class="icono" src="img/calendar_month_white_48dp.svg" alt="icono de calendario"><a
-          href="calendario.html">Calendario de cursos</a></li>
-      <li><img class="icono" src="img/card_giftcard_white_48dp.svg" alt="icono de giftcard"><a
-          href="gift_card.html">Gift Cards</a></li>
-      <li><img class="icono" src="img/contact_support_white_48dp.svg" alt="icono de contacto"><a
-          href="contacto.html">Contacto</a></li>
-    </ul>
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="cursos.html">Cursos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="becas.html">Beca</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contacto.html">Contacto</a>
+        </li>
+      </ul>
+    </div>
   </nav>
   <main>
     <section class="container">
@@ -72,7 +107,7 @@
             <br>
             <div class="row">
               <div class="col-4">
-                <input type="tel" class="form-control" id="dni" placeholder="Ingrese su dni">
+                <input type="tel" class="form-control" id="dni" placeholder="Ingrese dni">
               </div>
 
               <div class="col">
@@ -103,51 +138,51 @@
                 <input type="text" class="form-control" placeholder="Ingrese nacionalidad" aria-label="nacionalidad">
               </div>
             </div>
-<br>
+            <br>
             <div class="row">
               <div class="col">
                 <input type="text" class="form-control" placeholder="¿Como nos conocio?" aria-label="Nombre">
               </div>
             </div>
-<br>
+            <br>
 
-<div class="row">
-  <label for=""> Ya sabes a que curso queres inscribirte? </label>
-</div>
-<div class="row">
-  <select class="form-select " aria-label="Disabled select example" >
-    <option selected>Elegí un curso</option>
+            <div class="row">
+              <label for=""> Ya sabes a que curso queres inscribirte? </label>
+            </div>
+            <div class="row">
+              <select class="form-select " aria-label="Disabled select example">
+                <option selected>Elegí un curso</option>
 
-  <option value="1">Hackeando la NASA</option>
-  <option value="2">Hackeando al Nasa</option>
-  <option value="3">Tirando Sarasa</option>
-</select>
-</div>
-<br>
-<div class="row">
-  <label for="">Estas Laburando vieji? </label>
-</div>
-<br>
-<div class="row">
-  <div class="col-6">
-    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-    <label class="form-check-label" for="flexRadioDefault1">
-      Si
-    </label>
-  </div>
-  <div class="col-6">
-    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-    <label class="form-check-label" for="flexRadioDefault2">
-      No
-    </label>
-  </div>
-</div>
-<br>
+                <option value="1">Hackeando la NASA</option>
+                <option value="2">Hackeando al Nasa</option>
+                <option value="3">Tirando Sarasa</option>
+              </select>
+            </div>
+            <br>
+            <div class="row">
+              <label for="">Estas Laburando vieji? </label>
+            </div>
+            <br>
+            <div class="row" style="padding-left: 30px;">
+              <div class="col-6">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                <label class="form-check-label" for="flexRadioDefault1">
+                  Si
+                </label>
+              </div>
+              <div class="col-6">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                <label class="form-check-label" for="flexRadioDefault2">
+                  No
+                </label>
+              </div>
+            </div>
+            <br>
 
-<div class="row">
-  <textarea class="form-control" aria-label="With textarea"
-    placeholder="Contanos en qué o qué estas haciendo actualmente"></textarea>
-</div>
+            <div class="row">
+              <textarea class="form-control" aria-label="With textarea"
+                placeholder="Contanos en qué o qué estas haciendo actualmente"></textarea>
+            </div>
         </div>
         <!--Aca esta el otro DIV-->
         <div class="col-5 bg-light-subtle border rounded-4 p-3">
@@ -158,7 +193,7 @@
             <label for="">Tiene conocimientos en lenguajes de programación? </label>
           </div>
           <br>
-          <div class="row">
+          <div class="row" style="padding-left: 30px;">
             <div class="col-6">
               <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
               <label class="form-check-label" for="flexRadioDefault1">
@@ -180,7 +215,7 @@
           </div>
           <br>
           <div class="row">
-            <div class="col">
+            <div class="col" style="padding-left: 30px;">
               <input class="form-check-input" type="radio" name="flexRadioDefault" id="RadioTrainee">
               <label class="form-check-label" for="RadioTrainee">
                 No sé naranja
@@ -216,7 +251,7 @@
           </div>
           <br>
           <div class="row">
-            <div class="col-3">
+            <div class="col-3" style="padding-left: 30px;">
               <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault1">
               <label class="form-check-label" for="flexRadioDefault1">
                 C
@@ -246,7 +281,7 @@
           <br>
 
           <div class="row">
-            <div class="col-3">
+            <div class="col-3" style="padding-left: 30px;">
               <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault1">
               <label class="form-check-label" for="flexRadioDefault1">
                 Java
@@ -273,7 +308,7 @@
           </div>
           <br>
 
-          <div class="row">
+          <div class="row" style="padding-left: 16px;">
             <div class="col-3">
               <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault1">
               <label class="form-check-label" for="flexRadioDefault1">
@@ -301,7 +336,7 @@
           </div>
           <br>
 
-          <div class="row">
+          <div class="row" style="padding-left: 16px;">
             <div class="col-3">
               <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault1">
               <label class="form-check-label" for="flexRadioDefault1">
@@ -355,27 +390,48 @@
       <a href="index.html" class="boton" id="aceptar">ACEPTAR</a>
     </div>
   </main>
-  <footer>
-    <ul>
-      <h5>Copyright 2023 - Tecnicatura web - UNLAM</h5>
-      <li>Roldán, Emiliano 10.700.536</li>
-      <li>Dominguez, Agustin 42.193.753</li>
-      <li>Arquitecto, Rodrigo, 34.114.124</li>
-    </ul>
-    <ul>
-
-      <li><a href="">Acerca de Tree Academy</a></li>
-      <li><a href="">Términos y condiciones</a></li>
-
-    </ul>
-    <ul class="redes">
-      <li><a href="https://www.instagram.com/" target="_blank"> <img src="img/instagram.svg"
-            alt="link hacia instagram"></a></li>
-      <li> <a href="https://es-la.facebook.com/" target="_blank"> <img src="img/facebook.svg" alt="link hacia facebook">
-        </a></li>
-      <li><a href="https://twitter.com/?lang=es" target="_blank"> <img src="img/twitter.svg" alt="link hacia twitter">
-        </a></li>
-    </ul>
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <p>&copy; 2023 BIT Academy</p>
+        </div>
+        <div class="col-md-6 text-md-right">
+          <ul class="list-inline">
+            <li class="list-inline-item">
+              <a href="#">Preguntas frecuentes</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">Sobre la Academia</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">Términos y condiciones</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <ul class="list-inline">
+            <li class="list-inline-item">
+              <a href="#">
+                <img src="img/instagram.svg" alt="Facebook">
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <img src="img/facebook.svg" alt="Twitter">
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <img src="img/twitter.svg" alt="Instagram">
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </footer>
   <script src="js/becas.js"></script>
 </body>
