--- a/contacto.html
+++ b/contacto.html
@@ -5,9 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bit Academy - Contacto</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+    <title>Bit Academy - Inicio</title>
+    <link href='fullcalendar/core/main.css' rel='stylesheet' />
+    <link href='fullcalendar/daygrid/main.css' rel='stylesheet' />
+    <script src='fullcalendar/core/main.js'></script>
+    <script src='fullcalendar/daygrid/main.js'></script>
+
+
     <link rel="stylesheet" href="css/estilos_generales.css">
+    <link rel="stylesheet" href="css/estilos_cursos.css">
+    <link rel="stylesheet" href="css/estilos_nav_footer.css">
     <link rel="stylesheet" href="css/estilos_contacto.css">
+
+
+    <link rel="stylesheet" href="web-fonts-with-css/css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="web-fonts-with-css/css/fa-brands.min.css">
+
+
+
+
 </head>
 
 <body>
@@ -18,23 +39,37 @@
             <ul class="resultados ocultar"></ul>
         </div>
         <div class="grupo">
-            <img class="carrito" src="img/shopping_cart_black_48dp.svg" alt="carrito">
-            <span class="cantidad">0</span>
+            <div>
+                <a href="#"><span class="material-symbols-outlined">
+                        account_circle
+                    </span></a>
+            </div>
             <ul class="compras ocultar">
                 <li id="sin-cursos">Todavía no se han obtenido cursos.</li>
             </ul>
         </div>
     </header>
-    <nav> <!--MENU-->
-        <ul class="menu">
-            <li><img class="icono" src="img/home_white_48dp.svg" alt="icono de home"> <a href="index.html">Home</a></li>
-            <li><img class="icono" src="img/calendar_month_white_48dp.svg" alt="icono de calendario"><a
-                    href="calendario.html">Calendario de cursos</a></li>
-            <li><img class="icono" src="img/card_giftcard_white_48dp.svg" alt="icono de giftcard"><a
-                    href="gift_card.html">Gift Cards</a></li>
-            <li><img class="icono" src="img/contact_support_white_48dp.svg" alt="icono de contacto"><a
-                    href="contacto.html">Contacto</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="cursos.html">Cursos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="becas.html">Beca</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contacto.html">Contacto</a>
+                </li>
+            </ul>
+        </div>
     </nav>
     <main>
         <section class="contenedor-top">
@@ -104,27 +139,48 @@
             <a href="index.html" class="boton" id="aceptar">ACEPTAR</a>
         </div>
     </main>
-    <footer>
-        <ul>
-            <h5>Copyright 2023 - Tecnicatura web - UNLAM</h5>
-            <li>Arroyo, Jonatan David - 38.700.536</li>
-            <li>Lee Gonzáles, Mariana - 42.193.753</li>
-            <li>Riveira González, María Constanza - 34.114.124</li>
-        </ul>
-        <ul>
-            <li><a href="">Preguntas frecuentes</a></li>
-            <li><a href="">Acerca de Bit Academy</a></li>
-            <li><a href="">Términos y condiciones</a></li>
-            <li><a href="">Cancelar una compra</a></li>
-        </ul>
-        <ul class="redes">
-            <li><a href="https://www.instagram.com/" target="_blank"> <img src="img/instagram.svg"
-                        alt="link hacia instagram"></a></li>
-            <li> <a href="https://es-la.facebook.com/" target="_blank"> <img src="img/facebook.svg"
-                        alt="link hacia facebook"> </a></li>
-            <li><a href="https://twitter.com/?lang=es" target="_blank"> <img src="img/twitter.svg"
-                        alt="link hacia twitter"> </a></li>
-        </ul>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <p>&copy; 2023 BIT Academy</p>
+                </div>
+                <div class="col-md-6 text-md-right">
+                    <ul class="list-inline">
+                        <li class="list-inline-item">
+                            <a href="#">Preguntas frecuentes</a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#">Sobre la Academia</a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#">Términos y condiciones</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <ul class="list-inline">
+                        <li class="list-inline-item">
+                            <a href="#">
+                                <img src="img/instagram.svg" alt="Facebook">
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#">
+                                <img src="img/facebook.svg" alt="Twitter">
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#">
+                                <img src="img/twitter.svg" alt="Instagram">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
     <script src="js/contacto.js"></script>
 </body>
