--- a/cursos.html
+++ b/cursos.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-   
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
     <title>Bit Academy - Cursos</title>
     <link href='fullcalendar/core/main.css' rel='stylesheet' />
     <link href='fullcalendar/daygrid/main.css' rel='stylesheet' />
@@ -21,7 +23,7 @@
     <link rel="stylesheet" href="web-fonts-with-css/css/fontawesome-all.min.css">
     <link rel="stylesheet" href="web-fonts-with-css/css/fa-brands.min.css">
 
-   
+
 
 
 </head>
@@ -35,14 +37,15 @@
             <ul class="resultados ocultar"></ul>
         </div>
         <div class="grupo">
-            <img class="carrito" src="img/shopping_cart_black_48dp.svg" alt="carrito">
-            <span class="cantidad">0</span>
+            <div>
+                <a href="#"><span class="material-symbols-outlined">
+                        account_circle
+                    </span></a>
+            </div>
             <ul class="compras ocultar">
                 <li id="sin-cursos">Todavía no se han obtenido cursos.</li>
             </ul>
         </div>
-
-
     </header>
     <nav class="navbar navbar-expand-lg navbar-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -52,16 +55,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Cursos</a>
+                    <a class="nav-link" href="cursos.html">Cursos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Beca</a>
+                    <a class="nav-link" href="becas.html">Beca</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
+                    <a class="nav-link" href="contacto.html">Contacto</a>
                 </li>
             </ul>
         </div>
@@ -175,7 +178,7 @@
                         <div class="card-body">
                             <h5 class="card-title">CURSO BASICO C#</h5>
                             <p class="card-text">Aprenderas los conceptos basico de c# </p>
-                            
+
                             <a href="#" class="btn btn-primary">Ver Detalles</a>
                         </div>
                     </div>
@@ -197,47 +200,47 @@
     </main>
     <footer class="footer">
         <div class="container">
-          <div class="row">
-            <div class="col-md-6">
-              <p>&copy; 2023 BIT Academy</p>
+            <div class="row">
+                <div class="col-md-6">
+                    <p>&copy; 2023 BIT Academy</p>
+                </div>
+                <div class="col-md-6 text-md-right">
+                    <ul class="list-inline">
+                        <li class="list-inline-item">
+                            <a href="#">Preguntas frecuentes</a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#">Sobre la Academia</a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#">Términos y condiciones</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="col-md-6 text-md-right">
-              <ul class="list-inline">
-                <li class="list-inline-item">
-                  <a href="#">Preguntas frecuentes</a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">Sobre la Academia</a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">Términos y condiciones</a>
-                </li>
-              </ul>
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <ul class="list-inline">
+                        <li class="list-inline-item">
+                            <a href="#">
+                                <img src="img/instagram.svg" alt="Facebook">
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#">
+                                <img src="img/facebook.svg" alt="Twitter">
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#">
+                                <img src="img/twitter.svg" alt="Instagram">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-md-12 text-center">
-              <ul class="list-inline">
-                <li class="list-inline-item">
-                  <a href="#">
-                    <img src="img/instagram.svg" alt="Facebook">
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <img src="img/facebook.svg" alt="Twitter">
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <img src="img/twitter.svg" alt="Instagram">
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
         </div>
-      </footer>
+    </footer>
     <script src="js/calendario.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
