--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bit Academy - Inicio</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+
     <link rel="stylesheet" href="css/estilos_generales.css">
     <link rel="stylesheet" href="css/estilos_index.css">
-    <link rel="stylesheet" href="./js/slick-1.8.1/slick/slick.css">
-    <link rel="stylesheet" href="js/slick-1.8.1/slick/slick-theme.css">
-    <link rel="stylesheet" href="css/slider.css">
+    <link rel="stylesheet" href="css/estilos_nav_footer.css">
+
+
+
 </head>
 
 <body>
@@ -20,43 +29,67 @@
             <input class="buscador" type="search" name="q">
             <ul class="resultados ocultar"></ul>
         </div>
-        <div  class="grupo">
-        <div>
-            <img class="carrito" src="img/shopping_cart_black_48dp.svg" alt="carrito">
-            <span class="cantidad">0</span>
-            
-        </div>
+        <div class="grupo">
+            <div>
+                <a href="#"><span class="material-symbols-outlined">
+                        account_circle
+                    </span></a>
+            </div>
             <ul class="compras ocultar">
                 <li id="sin-cursos">Todavía no se han obtenido cursos.</li>
             </ul>
         </div>
     </header>
-    <nav> <!--MENU-->
-        <ul class="menu">
-            <li><img class="icono" src="img/home_white_48dp.svg" alt="icono de home"> <a href="index.html">Home</a></li>
-            <li><img class="icono" src="img/calendar_month_white_48dp.svg" alt="icono de calendario"><a
-                    href="calendario.html">Calendario de cursos</a></li>
-            <li><img class="icono" src="img/card_giftcard_white_48dp.svg" alt="icono de giftcard"><a
-                    href="gift_card.html">Gift Cards</a></li>
-            <li><img class="icono" src="img/contact_support_white_48dp.svg" alt="icono de contacto"><a
-                    href="contacto.html">Contacto</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="cursos.html">Cursos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="becas.html">Beca</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contacto.html">Contacto</a>
+                </li>
+            </ul>
+        </div>
     </nav>
     <main>
         <!--CAROUSEL-->
-        <section>
-            <h1>Cursos disponibles</h1>
-            <section>
-                <div class="contenedor-c">
-                    <div class="slideshow">
-                        <div class=" slide slide1"></div>
-                        <div class=" slide slide2"></div>
-                        <div class=" slide slide3"></div>
-                    </div>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="img/slider1.jpg" alt="First slide">
                 </div>
-            </section>
-        </section>
-
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="img/slider2.png" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="img/slider3.jpg" alt="Third slide">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
         <!--PASOS PARA INSCRIBIRSE-->
         <section>
             <h2>Cómo comprar</h2>
@@ -83,7 +116,7 @@
         <section>
             <h2> Cursos destacados</h2>
             <div class="destacados" id="container">
-                
+
             </div>
         </section>
 
@@ -100,31 +133,54 @@
         </aside>
         <a href="#inicio" class="arriba"></a>
     </main>
-    <footer>
-        <ul>
-            <h5>Copyright 2023 - Tecnicatura web - UNLAM</h5>
-            <li>Arroyo, Jonatan David - 38.700.536</li>
-            <li>Lee Gonzáles, Mariana - 42.193.753</li>
-            <li>Riveira González, María Constanza - - 34.114.124</li>
-        </ul>
-        <ul>
-            <li><a href="">Preguntas frecuentes</a></li>
-            <li><a href="">Acerca de Bit Academy</a></li>
-            <li><a href="">Términos y condiciones</a></li>
-            <li><a href="">Cancelar una compra</a></li>
-        </ul>
-        <ul class="redes">
-            <li><a href="https://www.instagram.com/" target="_blank"> <img src="img/instagram.svg"
-                        alt="link hacia instagram"></a></li>
-            <li> <a href="https://es-la.facebook.com/" target="_blank"> <img src="img/facebook.svg"
-                        alt="link hacia facebook"> </a></li>
-            <li><a href="https://twitter.com/?lang=es" target="_blank"> <img src="img/twitter.svg"
-                        alt="link hacia twitter"> </a></li>
-        </ul>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <p>&copy; 2023 BIT Academy</p>
+                </div>
+                <div class="col-md-6 text-md-right">
+                    <ul class="list-inline">
+                        <li class="list-inline-item">
+                            <a href="#">Preguntas frecuentes</a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#">Sobre la Academia</a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#">Términos y condiciones</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <ul class="list-inline">
+                        <li class="list-inline-item">
+                            <a href="#">
+                                <img src="img/instagram.svg" alt="Facebook">
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#">
+                                <img src="img/facebook.svg" alt="Twitter">
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#">
+                                <img src="img/twitter.svg" alt="Instagram">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
     <script src="js/index.js"></script>
     <script src="js/jquery-latest.js"></script>
     <script src="./js/slick-1.8.1/slick/slick.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
     <script>
         $(".slideshow").slick({
             mobileFirst: true,
